deploy: vercel + github pages

--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>World Analyzer MK | OS-X</title>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#06b6d4" />
+
+    <!-- Primary Meta Tags -->
+    <title>World Analyzer | MK_OS-X 2026 Analytical Suite</title>
+    <meta name="title" content="World Analyzer | MK_OS-X 2026 Analytical Suite">
+    <meta name="description"
+        content="Advanced geopolitical data probing unit. Real-time global entity analysis, technical summaries, and high-fidelity cyberpunk interface. Built with React 19 and Tailwind v4.">
+    <meta name="keywords"
+        content="world analyzer, mk os, geopolitical data, react 19, tailwind v4, cyberpunk ui, global entities, datavis">
+    <meta name="author" content="Kazi Musharraf">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mk-knight23.github.io/12-world-capstone-game/">
+    <meta property="og:title" content="World Analyzer | MK_OS-X 2026 Analytical Suite">
+    <meta property="og:description"
+        content="Access the global geopolitical database through a high-precision technical interface.">
+    <meta property="og:image" content="https://mk-knight23.github.io/12-world-capstone-game/analyzer-ss.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://mk-knight23.github.io/12-world-capstone-game/">
+    <meta name="twitter:title" content="World Analyzer | MK_OS-X 2026 Analytical Suite">
+    <meta name="twitter:description"
+        content="Access the global geopolitical database through a high-precision technical interface.">
+    <meta name="twitter:image" content="https://mk-knight23.github.io/12-world-capstone-game/analyzer-ss.png">
+
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "World Analyzer MK_OS-X",
+        "description": "Geopolitical Data Probing Unit",
+        "url": "https://mk-knight23.github.io/12-world-capstone-game/"
+    }
+    </script>
 </head>
 
-<body class="overflow-hidden">
+<body class="bg-[#020617] text-cyan-500 font-mono antialiased overflow-hidden select-none">
+    <a href="#root"
+        class="sr-only focus:not-sr-only focus:fixed focus:top-4 focus:left-4 focus:z-[100] focus:px-4 focus:py-2 focus:bg-cyan-600 focus:text-white focus:rounded-lg">Skip
+        to main</a>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
